# lsmonitor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt  test_main.cpp
file_event/: fanotify_event.cpp  fanotify_event.h  fanotify_reader.h  lsprobe_event.cpp  lsprobe_event.h  lsprobe_reader.h
lsmonitor/: broadcast.cpp  broadcast.h  container.h  control_event.h  control_reader.cpp  control_reader.h  event.h  fanotify_event.cpp  fanotify_event.h  fanotify_reader.cpp  fanotify_reader.h  file_event.h  file_event_predicate.cpp  file_event_predicate.h  filter.h  function_traits.h  lsprobe_event.cpp  lsprobe_event.h  lsprobe_reader.cpp  lsprobe_reader.h  main.cpp  source_manager.cpp  source_manager.h  source_manager.hpp  stringify.h  utility.cpp  utility.h  variant.h
lspredicate/: ast.hpp  ast_adapted.hpp  cmdl_expression.cpp  cmdl_expression.h  expression.cpp  expression.hpp  expression_def.hpp  main.cpp  printer.cpp  printer.hpp
